Update Blog.css Bug where headers were not aligning properly
Solved the responsive issue in the blog section inside the resources page where the headers were not aligning properly

--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -383,3 +383,7 @@
     font-size: 4vw;
   }
 }
+
+.active{
+  width: auto !important;
+}
